--- a/src/App.css
+++ b/src/App.css
@@ -126,12 +126,23 @@ text-underline-offset: 2px;
 /* About */
 .about_container {
   margin-top: 50px;
-  height: 400px;
-  width: 600px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
   background-color: whitesmoke;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  border-radius: 15px;
+ 
   padding: 10px;
+  border: 1px solid black;
+}
+
+.about_img {
+  grid-column: 2 / 3;
+}
+.about_img img {
+ width: 100%;
+}
+
+.detail{
+  grid-column: 1 / 2;
 }
 
 /* Banner */
@@ -162,4 +173,9 @@ text-underline-offset: 2px;
     display: flex;
     flex-direction: column;
   }
+  .about_container {
+    display: flex;
+    flex-direction: column;
+}
+
 }
